[Autofill] Save Card Bubble: Register a WebContentsMouseHandler

Allows the bubble to be dismissed when the web contents is clicked, even
if the bubble has not been interacted with.

Bug: 793081
Change-Id: I9597bd8162db2fdc82a821621d28a301165fa7a1