chrome/browser/ui/views/autofill/save_card_bubble_views.h
@@ -108,6 +108,8 @@ class SaveCardBubbleViews : public SaveCardBubbleView,
   views::Textfield* cvc_textfield_ = nullptr;
   views::Link* learn_more_link_ = nullptr;
 
+  std::unique_ptr<WebContentMouseHandler> mouse_handler_;
+
   DISALLOW_COPY_AND_ASSIGN(SaveCardBubbleViews);
 };
 
